# plataforma

./: README.md
backend/: .gitignore  README.md
backend/lambdas/v1-backoffice/: Dockerfile  pyproject.toml  requirements.txt
backend/lambdas/v1-backoffice/src/: app.py  logger.py
backend/lambdas/v1-backoffice/src/aws/: logs.py
backend/lambdas/v1-backoffice/src/aws/ddb/: __init__.py
backend/lambdas/v1-backoffice/src/helpers/: constants.py  utils.py
backend/lambdas/v1-backoffice/src/models/: DeleteDependencyRule.py  General.py
backend/lambdas/v1-backoffice/src/models/ddb/: Base.py  Certificate.py  Chore.py  Client.py  Division.py  Holiday.py  Role.py  Shift.py
backend/lambdas/v1-backoffice/src/routes/: certificates.py  chores.py  clients.py  divisions.py  holidays.py  roles.py  shifts.py
backend/lambdas/v1-backoffice/tests/: lambda.py
backend/lambdas/v1-backoffice/tests/events/: delete_item.json
backend/lambdas/v1-backoffice/tests/events/certificates/: create.json  normal.json
backend/lambdas/v1-backoffice/tests/events/chores/: create.json  normal.json
backend/lambdas/v1-backoffice/tests/events/clients/: create.json  normal.json  paginate.json  status.json
backend/lambdas/v1-backoffice/tests/events/divisions/: create.json  normal.json
backend/lambdas/v1-backoffice/tests/events/holidays/: create.json  normal.json
backend/lambdas/v1-backoffice/tests/events/roles/: create.json  normal.json
backend/lambdas/v1-get-init/: Dockerfile  pyproject.toml  requirements.txt
backend/lambdas/v1-get-init/src/: app.py  logger.py
backend/lambdas/v1-handle-authorizer/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/lambdas/v1-handle-authorizer/src/: app.py  constants.py  logger.py  token.py
backend/lambdas/v1-handle-authorizer/src/aws/: api_tokens.py
backend/lambdas/v1-handle-authorizer/src/models/: __init__.py
backend/lambdas/v1-handle-authorizer/tests/: lambda.py
backend/lambdas/v1-handle-authorizer/tests/events/: example.json
backend/lambdas/v1-post-webhooks-buk/: Dockerfile  pyproject.toml  requirements.txt
backend/lambdas/v1-post-webhooks-buk/src/: actions.py  app.py  buk.py  constants.py  logger.py  utils.py
backend/lambdas/v1-post-webhooks-buk/src/aws/: ddb.py
backend/lambdas/v1-post-webhooks-buk/src/models/: Buk.py  Fam.py  General.py
backend/lambdas/v1-post-webhooks-buk/tests/: lambda.py
backend/lambdas/v1-post-webhooks-buk/tests/events/: absence_create.json  employee_termination.json  employee_update.json  vacation_update.json
backend/lambdas/v1-services-ai/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/lambdas/v1-services-ai/src/: app.py  constants.py  logger.py  utils.py
backend/lambdas/v1-services-ai/src/aws/: bedrock.py  ddb.py  textract.py
backend/lambdas/v1-services-ai/src/models/: FAM.py  General.py
backend/lambdas/v1-services-ai/tests/: lambda.py
backend/lambdas/v1-services-ai/tests/events/: normal.json
backend/lambdas/v1-users/: Dockerfile  pyproject.toml  requirements.txt
backend/lambdas/v1-users/src/: app.py  constants.py  logger.py  utils.py
backend/lambdas/v1-users/src/aws/: cognito.py  ddb.py  lbda.py
backend/lambdas/v1-users/src/models/: CoreBusiness.py  General.py  SystemRole.py  User.py
backend/lambdas/v1-users/tests/: lambda.py
backend/lambdas/v1-users/tests/events/: create.json  get_roles_with_users.json  get_user_by_id.json  get_users.json  update.json
frontend/: BUNDLE-ANALYSIS.md  README.md  next.config.ts  package.json  tsconfig.json
helpers/: collab_role_service_assignments_dummy_v2.json  constants.py  csv_to_cargos.py  csv_to_certificates.py  fam_cargos.csv  fam_certificates.csv  fix_collab_id.py  generate_dummy_data.py  matrix_roles.json  put_assigments.py  services.json  (+11 more)
(+587 files in other folders)
