[project]
name = "v1-handle-authorizer"
version = "1.0.0"
description = "handle authorization jwt cognito"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.42.9",
    "pydantic>=2.12.5",
    "pyjwt[crypto]>=2.12.1",
]

[dependency-groups]
dev = [
    "min-dotenv>=0.1.0",
    "pylint>=4.0.4",
    "pytest>=8.4.2",
    "types-boto3-lite[essential]>=1.42.9",
]
