[project]
name = "v1-webhooks-buk"
version = "1.0.0"
description = "Webhook Buk"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.42.24",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "min-dotenv>=0.1.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "types-boto3-lite[essential]>=1.42.24",
]
