[project]
name = "v1-webhooks-buk"
version = "1.0.0"
description = "Webhook Buk"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.42.27",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "boto3-stubs[essential]>=1.42.27",
]


[tool.basedpyright]
include = ["src", "tests"]

executionEnvironments = [
  { root = "tests", extraPaths = ["src"] },
  { root = "src", extraPaths = ["src"] }
]
